fix scrollbars being hidden when sidebar is disabled on firefox
+ rename components, to follow vue style guides

--- a/src/assets/scss/moz.scss
+++ b/src/assets/scss/moz.scss
@@ -14,23 +14,7 @@
     }
   }
 
-  // #app-grid.isSmall,
-  // #app-grid.disableSidebar {
-  //   #acontent {
-  //     margin-right: -$small;
-  //     padding-right: $medium;
-
-  //     .search-view {
-  //       margin-right: -0.8rem;
-  //     }
-  //   }
-  // }
-
-  // #app-grid.isSmall #page-search {
-  //   margin-right: $smaller;
-  // }
-
-  // #app-grid.disableSidebar #page-search {
-  //   margin-right: $smaller;
-  // }
+  #app-grid.noSidebar > #acontent {
+    padding-right: 1rem !important;
+  }
 }
